Apply PR suggestions